# mupengui

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  README.md  meson.build
data/: com.github.efdos.mupen-gui.appdata.xml.in  com.github.efdos.mupen-gui.desktop.in.in  com.github.efdos.mupen-gui.gschema.xml  com.github.efdos.mupengui.appdata.xml.in  com.github.efdos.mupengui.desktop.in.in  com.github.efdos.mupengui.gschema.xml
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.efdos.mupengui.pot  fr.po  nl.po  pt.po
src/: Actions.vala  Application.vala
src/C/: test.c
src/Configuration/: ButtonConfig.vala  DeviceConfig.vala
src/JoystickAPI/: joy_listener.c
src/MupenAPI/: common.h  dynlib.c  dynlib.h  mupenAPI.c
src/Services/: ActionManager.vala  DisplaySettings.vala  FileSystem.vala  Globals.vala  JoystickListener.vala  Mupen64API.vala  Settings.vala  SettingsProfile.vala  SettingsProfileManager.vala
src/Views/: MainView.vala  RomListView.vala  SettingsView.vala  WelcomeView.vala
src/Views/Settings/: DisplaySettingsPage.vala  GeneralSettingsPage.vala  InputSettingsPage.vala
src/Views/Widgets/: JoystickEventDialog.vala  RomListItem.vala
src/Views/Window/: HeaderBar.vala
